# examples

./: .gitignore
code/error-handling/: example.ml
code/error-handling/alpha_vantage/: Makefile  alpha_vantage.opam  av.ml  jbuild
code/files-modules-and-programs/: freq.ml  session_info.ml
code/files-modules-and-programs-freq-median/: freq.ml
code/files-modules-and-programs/freq_test/: counter.ml  counter.mli  freq.ml  jbuild
code/files-modules-and-programs/nested_module/: .merlin  jbuild  main.ml  what.ml  what.mli
code/files-modules-and-programs/weather_api/: Makefile
code/files-modules-and-programs/weather_api/src/: current.ml  current.mli  forecast.ml  forecast.mli  jbuild  request.mli  temp.ml  temp.mli  weather.ml  weather.mli
code/guided-tour/: sum.ml
code/guided-tour/weather_api/: .ocamlinit  Makefile  jbuild  main.ml  weather_api.ml  weather_api.opam
code/guided-tour/weather_api/lib/: jbuild  weather_api.ml
code/guided-tour/weather_api/test/: jbuild
code/lists-and-patterns/: destutter.ml
code/records/: .merlin  example.ml
code/records/example/: Makefile  example.opam
code/records/example/src/: example.ml  jbuild
code/records/weather_api/src/: api.mli  current.ml  current.mli  forecast.ml  forecast.mli  item.ml  item.mli  jbuild  request.ml  temp.ml  temp.mli  weather.ml  weather.mli
code/variables-and-functions/weather-api/: jbuild  main.ml  weather-api.opam  weather.ml
code/variants/: example.ml  poly_color.ml  poly_color.mli  test.ml
code/variants/blang/: .ocamlinit  Makefile  myblang.opam
code/variants/blang/src/: jbuild  (+1 more)
